# adwiser_spacy

./: setup.cfg
adwiser_spacy/: __init__.py  models.py
