[metadata]
name=adwiser_spacy
version=0.1.11
license=MIT
description=
project_urls=
    Homepage=https://github.com/vmstarchenko/adwiser_spacy
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/vmstarchenko/adwiser_spacy
keywords=
platform=any
classifiers=
    Development Status :: 3 - Alpha

[options]
setup_requires=setuptools>=42
install_requires=
    scrapy
packages=adwiser_spacy
zip_safe=false

[check]
metadata=true
